--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,37 +9,40 @@ services:
       - "3002:3002"
     volumes:
       - .:/usr/src/app
-   
+      - /usr/src/app/node_modules
     links:
       - mongo 
 
   chatserver:
     container_name: chatserver
     restart: always
-    build: ./server
+    build: ./chatserver
     ports:
       - "4000:4000"
     volumes:
       - .:/usr/src/app
+      - /usr/src/app/node_modules
+
  
   client:
     container_name: client
     restart: always
-    build: ./server
+    build: ./chatserver
     ports:
       - "80:3000"
     volumes:
       - .:/usr/src/app
+      - /usr/src/app/node_modules
     
   admin:
     container_name: admin
     restart: always
-    build: ./server
+    build: ./chatserver
     ports:
       - "81:3001"
     volumes:
       - .:/usr/src/app
-
+      - /usr/src/app/node_modules
  
   mongo:
     container_name: mongo
