--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,7 @@ services:
       - "3002:3002"
     volumes:
       - .:/home/node/app
-      - node_modules:/home/node/app/node_modules
+      - server:/home/node/app/node_modules
     links:
       - mongo 
 
@@ -21,7 +21,7 @@ services:
       - "4000:4000"
     volumes:
       - .:/home/node/app
-      -  node_modules:/home/node/app/node_modules
+      -  chatserver:/home/node/app/node_modules
 
  
   client:
@@ -32,7 +32,7 @@ services:
       - "80:3000"
     volumes:
        - .:/home/node/app
-       -  node_modules:/home/node/app/node_modules
+       -  client:/home/node/app/node_modules
     
   admin:
     container_name: admin
@@ -42,7 +42,7 @@ services:
       - "81:3001"
     volumes:
       - .:/home/node/app
-      - node_modules:/home/node/app/node_modules
+      - admin:/home/node/app/node_modules
  
   mongo:
     container_name: mongo
