--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,7 +27,7 @@ services:
   client:
     container_name: client
     restart: always
-    build: ./chatserver
+    build: ./client
     ports:
       - "80:3000"
     volumes:
@@ -37,7 +37,7 @@ services:
   admin:
     container_name: admin
     restart: always
-    build: ./chatserver
+    build: ./admin
     ports:
       - "81:3001"
     volumes:
