--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ version: "3"
 services:
   server:
     container_name: server
-    restart: always
+    restart: unless-stopped
     build: ./server
     ports:
       - "3002:3002"
@@ -15,7 +15,7 @@ services:
 
   chatserver:
     container_name: chatserver
-    restart: always
+    restart: unless-stopped
     build: ./chatserver
     ports:
       - "4000:4000"
@@ -26,7 +26,7 @@ services:
  
   client:
     container_name: client
-    restart: always
+  
     build: ./client
     ports:
       - "80:3000"
@@ -36,7 +36,7 @@ services:
     
   admin:
     container_name: admin
-    restart: always
+     restart: unless-stopped
     build: ./admin
     ports:
       - "81:3001"
