--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,17 +26,18 @@ services:
  
   client:
     container_name: client
-  
+    restart: unless-stopped
     build: ./client
     ports:
       - "80:3000"
     volumes:
        - .:/home/node/app
+       - node_modules:/home/node/app/node_modules
 
     
   admin:
     container_name: admin
-     restart: unless-stopped
+    restart: unless-stopped
     build: ./admin
     ports:
       - "81:3001"
