--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -1,10 +1,10 @@
 FROM node:10
 
-RUN mkdir -p /home/node/app/node_modules 
+
 
 WORKDIR /home/node/app
 
-COPY package.json  /home/node/app/
+COPY package.json  .
 
 
 RUN npm install
