--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -1,16 +1,11 @@
+
 FROM node:10
 
+WORKDIR /usr/src/app
 
-
-WORKDIR /home/node/app
-
-COPY package.json  .
-
-
+COPY package*.json ./
 RUN npm install
 
 COPY . .
-
-EXPOSE 3000
 
 CMD [ "npm", "start" ]
