--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,10 +28,12 @@ services:
     container_name: client
     restart: unless-stopped
     build: ./client
+  
+    volumes:
+       - .:/usr/src/app
+       - /usr/src/app/node_modules
     ports:
       - "80:3000"
-    volumes:
-       - .:/home/node/app
    
 
     
