--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,17 +1,11 @@
+
 FROM node:10
 
-RUN mkdir -p /home/node/app/node_modules && chown -R node:node /home/node/app
-
-WORKDIR /home/node/app
+WORKDIR /usr/src/app
 
 COPY package*.json ./
-
-USER node
-
 RUN npm install
 
-COPY --chown=node:node . .
-
-EXPOSE 3002
+COPY . .
 
 CMD [ "npm", "start" ]
