--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,8 +30,9 @@ services:
     build: ./client
   
     volumes:
-       - .:/usr/src/app
-       - /usr/src/app/node_modules
+       - .:/home/node/app/
+       - node_modules:/home/node/app/node_modules
+       
     ports:
       - "80:3000"
    
