--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,7 +31,7 @@ services:
   
     volumes:
        - .:/home/node/app/
-       - node_modules:/home/node/app/node_modules
+       - client/node_modules:/home/node/app/node_modules
        
     ports:
       - "80:3000"
