--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,7 +31,7 @@ services:
   
     volumes:
        - ./client:/home/node/app/
-    command: ls -la
+    command: npm start
        
     ports:
       - "80:3000"
