--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,6 +29,8 @@ services:
     restart: unless-stopped
     build: ./client
   
+    volumes:
+       - ./client:/home/node/app/
   
        
     ports:
