--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,6 +31,7 @@ services:
   
     volumes:
        - ./client:/home/node/app/
+       - ./client/node_modules:/home/node/app/node_modules
   
        
     ports:
