--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,8 +32,7 @@ services:
     volumes:
        - ./client:/home/node/app/
        - ./client/node_modules:/home/node/app/node_modules
-  
-       
+    command: ls -la
     ports:
       - "80:3000"
   
