--- a/admin/package.json
+++ b/admin/package.json
@@ -25,8 +25,8 @@
   },
   "scripts": {
 
-    "start": "env-cmd react-scripts start",
-    "build": "env-cmd .env.staging npm run build",
+    "start": "set PORT=3001 &&  env-cmd react-scripts start",
+
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
