--- a/server/.env
+++ b/server/.env
@@ -1,4 +1,4 @@
-MONGODB_URI = mongodb://0.0.0.0:27017/shop
+MONGODB_URI = mongo://mongo:27017/shop
 #MONGODB_URI = mongodb://149.28.142.77:27017/shop
 PORT= 3002
 PRIVATE_KEY = 123
