--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,6 +1,6 @@
 
 FROM node:10
-RUN mkdir -p /home/node/app/node_modules && chown -R node:node /home/node/app
+RUN mkdir -p /home/node/app/node_modules 
 
 WORKDIR /home/node/app
 
@@ -10,7 +10,7 @@ USER node
 
 RUN npm install
 
-COPY --chown=node:node . .
+COPY  . .
 
 EXPOSE 3000
 
