--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,6 +1,6 @@
 
 FROM node:10
-RUN mkdir -p /home/node/app/node_modules 
+RUN mkdir -p /home/node/app/node_modules && chown -R node:node /home/node/app
 
 WORKDIR /home/node/app
 
@@ -10,8 +10,8 @@ USER node
 
 RUN npm install
 
-COPY  . .
+COPY --chown=node:node . .
 
-EXPOSE 3002
+EXPOSE 3001
 
 CMD [ "npm", "start"]
