--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,16 +1,16 @@
 
 FROM node:10
-RUN mkdir -p /home/node/app/node_modules && chown -R node:node /home/node/app
+RUN mkdir -p /home/node/app/node_modules && chown -R root:root /home/node/app
 
 WORKDIR /home/node/app
 
 COPY package*.json ./
 
-USER node
+USER root
 
 RUN npm install
 
-COPY --chown=node:node . .
+COPY --chown=root:root . .
 
 EXPOSE 3001
 
