--- a/admin/package.json
+++ b/admin/package.json
@@ -26,7 +26,7 @@
   "scripts": {
 
     "start": "set PORT=3001 &&  env-cmd react-scripts start",
-
+    "build": " env-cmd react-scripts start",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
