--- a/admin/Dockerfile
+++ b/admin/Dockerfile
@@ -13,6 +13,6 @@ RUN npm install -g serve
 COPY --chown=root:root . .
 
 EXPOSE 3001
-RUN serve -l 3001 -s build
+#RUN serve -l 3001 -s build
 #CMD [ "npm", "start"]
 #CMD [ "serve","-l" ,"3001" "-s","build"]
