--- a/admin/Dockerfile
+++ b/admin/Dockerfile
@@ -14,5 +14,5 @@ COPY --chown=root:root . .
 
 EXPOSE 3001
 #RUN serve -l 3001 -s build
-#CMD [ "npm", "start"]
+CMD [ "npm", "start"]
 #CMD [ "serve","-l" ,"3001" "-s","build"]
