--- a/admin/package.json
+++ b/admin/package.json
@@ -27,6 +27,7 @@
 
     "start": "set PORT=3001 &&  env-cmd react-scripts start",
     "build": " env-cmd react-scripts start",
+    "dev" : "serve -l 3001 -s build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
