--- a/admin/Dockerfile
+++ b/admin/Dockerfile
@@ -14,5 +14,5 @@ COPY --chown=root:root . .
 
 EXPOSE 3001
 #RUN serve -l 3001 -s build
-CMD [ "npm", "run" ,"dev"]
+#CMD [ "npm", "run" ,"dev"]
 #CMD [ "serve","-l" ,"3001" "-s","build"]
