--- a/admin/Dockerfile
+++ b/admin/Dockerfile
@@ -13,6 +13,7 @@ RUN npm install -g serve
 COPY --chown=root:root . .
 
 EXPOSE 3001
+EXPOSE 9000
 #RUN serve -l 3001 -s build
 CMD [ "npm", "start"]
 #CMD [ "serve","-l" ,"3001" "-s","build"]
