--- a/admin/.env
+++ b/admin/.env
@@ -1,4 +1,4 @@
-REACT_APP_PUBLIC_URL=
-REACT_APP_URL_API = http://localhost:3002/api
-REACT_APP_PUBLIC_URL =  http://localhost:3001
-REACT_APP_DEV_CHAT_URL =  http://localhost:4000
+REACT_APP_PUBLIC_URL= 
+REACT_APP_URL_API = http://149.28.142.77:3002/api
+REACT_APP_PUBLIC_URL =  http://149.28.142.77:3001
+REACT_APP_DEV_CHAT_URL = http://149.28.142.77:4000
