--- a/server/.env
+++ b/server/.env
@@ -2,5 +2,5 @@ MONGODB_URI = mongodb://mongo:27017/shop
 #MONGODB_URI = mongodb://149.28.142.77:27017/shop
 PORT= 3002
 PRIVATE_KEY = 123
-WHILELIST = http://localhost:3000,http://localhost:3001,http://localhost/
+WHILELIST = http://149.28.142.77,http://149.28.142.77:3001,http://149.28.142.77:3000
 COOKIES_DOMAIN =localhost
