--- a/client/.env
+++ b/client/.env
@@ -1,2 +1,2 @@
-REACT_APP_SECRET_CODE = "https://localhost:3002/api"
-REACT_APP_PUBLIC_URL = "https://localhost:3000"
+REACT_APP_SECRET_CODE = "http://149.28.142.77:3002/api"
+REACT_APP_PUBLIC_URL = "http://149.28.142.77:81"
