--- a/admin/package.json
+++ b/admin/package.json
@@ -25,7 +25,7 @@
   },
   "scripts": {
 
-    "start": "env-cmd react-scripts start",
+    "start": "PORT=3001 env-cmd react-scripts start",
     "build": " env-cmd react-scripts start",
     "dev" : "serve -l 9000 -s build",
     "test": "react-scripts test",
