--- a/client/.env
+++ b/client/.env
@@ -1,2 +1,3 @@
-REACT_APP_SECRET_CODE = "http://149.28.142.77:3002/api"
+
+REACT_APP_API = "http://149.28.142.77:3002/api"
 REACT_APP_PUBLIC_URL = "http://149.28.142.77:81"
